<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/game_over"

            />

        <TextView
            style="@style/headerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_lost" />

        <TextView
            android:id="@+id/tv_total_score"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_count_correct"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_wrong_answers"
            style="@style/normalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_count_wrong"
            android:textColor="@color/design_default_color_error"
            android:textSize="24sp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:fontFamily="sans-serif-black"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/btn_again"

            />

    </LinearLayout>
</layout>