<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/want"

            />

        <TextView
            style="@style/headerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_win" />

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:id="@+id/tv_total_score_wont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_count_correct"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_wrong_answers_wont"
            style="@style/normalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_count_wrong"
            android:textColor="@color/design_default_color_error"
            android:textSize="22sp"

            />

        <Button
            android:id="@+id/btn_try_again_wont"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:fontFamily="sans-serif-black"
            android:backgroundTint="@color/btn_background"
            android:text="@string/btn_again"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>