<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_me"
    app:startDestination="@id/startFragQuiz"
    >

    <fragment
        android:id="@+id/startFragQuiz"
        android:name="com.example.navigationcomponent_quiz.StartFragQuiz"
        android:label="@string/btn_start"
        tools:layout="@layout/fragment_start_frag_quiz"

        >
        <action
            android:id="@+id/action_startFragQuiz_to_questions_quiz"
            app:destination="@id/questions_quiz"
            app:enterAnim="@anim/in_right_animation"
            app:exitAnim="@anim/out_left_animation"
            app:popEnterAnim="@anim/in_left_animation"
            app:popExitAnim="@anim/out_right_animation"
            app:popUpTo="@id/questions_quiz"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/questions_quiz"
        android:name="com.example.navigationcomponent_quiz.Questions_quiz"
        android:label="@string/tv_question"
        tools:layout="@layout/fragment_questions_quiz"

        >
        <action
            android:id="@+id/action_questions_quiz_to_gameFragQuiz"
            app:destination="@id/gameFragQuiz"
            app:enterAnim="@anim/in_right_animation"
            app:exitAnim="@anim/out_left_animation"
            app:popEnterAnim="@anim/in_left_animation"
            app:popExitAnim="@anim/out_right_animation"
            app:popUpTo="@id/startFragQuiz"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_questions_quiz_to_wantFragQuiz"
            app:destination="@id/winFragQuiz"
            app:enterAnim="@anim/in_right_animation"
            app:exitAnim="@anim/out_left_animation"
            app:popEnterAnim="@anim/in_left_animation"
            app:popExitAnim="@anim/out_right_animation"
            app:popUpTo="@id/questions_quiz"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/gameFragQuiz"
        android:name="com.example.navigationcomponent_quiz.GameFragQuiz"
        android:label="@string/title_finalResult"
        tools:layout="@layout/fragment_game_frag_quiz">
        <action
            android:id="@+id/action_gameFragQuiz_to_questions_quiz"
            app:destination="@id/questions_quiz"
            app:enterAnim="@anim/in_right_animation"
            app:exitAnim="@anim/out_left_animation"
            app:popEnterAnim="@anim/in_left_animation"
            app:popExitAnim="@anim/out_right_animation"
            app:popUpTo="@id/questions_quiz" />
        <argument
            android:name="numCorrect"
            app:argType="integer"
            />
        <argument
            android:name="numWrong"
            app:argType="integer"
            />
    </fragment>
    <fragment
        android:id="@+id/winFragQuiz"
        android:name="com.example.navigationcomponent_quiz.WinFragQuiz"
        android:label="@string/title_finalResult"
        tools:layout="@layout/fragment_win_frag_quiz">
        <action
            android:id="@+id/action_wantFragQuiz_to_questions_quiz"
            app:destination="@id/questions_quiz"
            app:enterAnim="@anim/in_right_animation"
            app:exitAnim="@anim/out_left_animation"
            app:popEnterAnim="@anim/in_left_animation"
            app:popExitAnim="@anim/out_right_animation"
            app:popUpTo="@id/questions_quiz" />
        <argument
            android:name="numCorrect"
            app:argType="integer"
            />
        <argument
            android:name="numWrong"
            app:argType="integer"
            />
    </fragment>
    <fragment
        android:id="@+id/aboutFragQuiz"
        android:name="com.example.navigationcomponent_quiz.AboutFragQuiz"
        android:label="@string/tv_about"
        tools:layout="@layout/fragment_about_frag_quiz" />
    <fragment
        android:id="@+id/infoFragQuiz"
        android:name="com.example.navigationcomponent_quiz.InfoFragQuiz"
        android:label="@string/tv_information"
        tools:layout="@layout/fragment_info_frag_quiz" />
</navigation>